	array to sort the elements identified by the input array when the
	input array is a valid subset of indices
	* src/colValues.cpp: change sort function that takes an index
	array to make use new sort function of array_t
	* src/bundles.cpp: change the constructor of bundles that takes a
	list of values to skip over '*'
	* src/bord.cpp: columnType(i) --> columnType(jbdl)

2010-01-23 John Wu <John.Wu at ACM.org>
	* src/part.cpp: handle code to fill RIDs in the constructor that
	takes two directory names
	* src/bundle.cpp: a number of loops with g as loop variable, but
	actually used i instead, they cause the function reorder to
	mebehavior (a problem reported by Valeria Lorenzetti)

2010-01-22 John Wu <John.Wu at ACM.org>
	* src/part.h, src/part.cpp: change names ibis::util::tablesFromDir
	and ibis::util::tablesFromResource to ibis::util::gatherParts, add
	optional argument to indicate whether the data partitions are to
	be created for reading only
	* src/mensa.cpp: change all data partitions in mensa to be read-only

2010-01-20 John Wu <John.Wu at ACM.org>
	* README, INSTALL: add note about nightly snapshots and sudo
	problem with configure
	* src/part.h, src/part.cpp, src/parti.cpp: add protected member
	variable readonly, throw exception if readonly flag is set but the
	data directory is not properly configured

2010-01-19 John Wu <John.Wu at ACM.org>
	* src/query.cpp: update setWhereClause, setSelectClause and
	setPartition to print out the data partition name in case of error

2010-01-18 John Wu <John.Wu at ACM.org>
	* src/qExpr.h: add function isTrue to ibis::math::term
	* src/part.h, src/part.cpp: add a variation of doScan to treat an
	arithmetic expression as true or false
	* src/countQuery.cpp, src/query.cpp: add code to work with
	arithmetic expressions
	* src/qExpr.cpp: replace ibis::math::number(0.0) with call to
	ibis::compRange::makeConstantFalse.  Because the existing parser
	will not accpet a standard alone arithmethic expression (without