@@ -1589,6 +1589,7 @@ long ibis::bord::part::reorder(const ibis::table::stringList& cols) {
 #if DEBUG+0 > 0 || _DEBUG+0 > 0
     {
 	ibis::util::logger lg(4);
+	lg.buffer() << "DEBUG -- bord[" << name() << "]::reorder --\n";
 	std::vector<bool> marks(ind1.size(), false);
 	for (uint32_t i = 0; i < ind1.size(); ++ i) {
 	    if (i != ind1[i])
