@@ -1,6 +1,10 @@
-9, 98, 98, 1
-8, 88, 88, 1
-7, 78, 78, 1
-2, 28, 24, 9
-1, 19, 14.5, 10
-0, 9, 4.5, 10
+7, 0, 10, 6, 3
+4, 1, 9, 13, 11.5
+3, 0, 9, 9, 8
+1, 2, 8, 20, 20
+6, 1, 8, 19, 16.5
+7, 2, 7, 27, 24
+1, 2, 6, 28, 28
+1, 7, -1, 78, 78
+1, 8, -2, 88, 88
+1, 9, -4, 98, 98
